Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36128

QT_MOC_LITERAL generates warning in moc files with -Wsign-conversion gcc flag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • Build tools: moc
    • None

    Description

      If I add -Wsign-conversion, every moc-file has several warnings like this:
      warning: conversion to ‘qptrdiff

      {aka long long int}

      ’ from ‘long unsigned int’ may change the sign of the result [-Wsign-conversion]
      note: in expansion of macro ‘QT_MOC_LITERAL’

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ogoffart Olivier Goffart (Woboq GmbH)
            woodroof Danil Ilinykh
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes